# HW_WEB_12

./: README.md  db_sinc.py  main.py  pyproject.toml
front-end/: index.html  script.js
migrations/: README  env.py
migrations/versions/: 3548a0aa37d0_init.py  bdbb017ff39a_add_table_users.py
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/schemas/: contact.py
src/services/: roles.py
