[tool.poetry]
name = "hw-web-12"
version = "0.1.0"
description = ""
authors = ["NataSha157 <shnataliya77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.5.3"}
fastapi = "^0.105.0"
alembic = "^1.13.1"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
fastapi-jwt-auth = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
